# ip-counter

./: .gitignore  Cargo.toml  Dockerfile  README.md  ip-counter.nomad  ip-counter.nomad.hcl
.github/workflows/: deploy.yml
deploy/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
src/: config.rs  error.rs  main.rs  routes.rs  states.rs
src/handlers/: ip.rs  mod.rs
src/services/: ip.rs
