[package]
name = "ip-counter"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
envy = "0.4.2"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.174", features = ["derive"] }
snafu = "0.7.5"
